--- a/client/src/App.css
+++ b/client/src/App.css
@@ -342,10 +342,21 @@ main#contact1{
   margin-top: 80px;
 }
 .gestion {
+  padding-top :20px;
   text-align: center;
   margin-top: 80px;
   background-color: rgb(58, 53, 53);
   color: white;
+}
+.exist  li{
+ list-style-type: none;
+ gap:20px;
+}
+.exist button{
+  padding:5px;
+  border-radius:10px;
+  background-color: orange;
+  color:white;
 }
 .ajoutImage {
   display: flex;
@@ -354,9 +365,13 @@ main#contact1{
   flex-direction: column;
   gap: 20px;
 }
+
+
 .ajoutImage input {
   padding: 5px;
   border-radius: 10px;
+  background-color: orange;
+  color:white;
 }
 .ajoutImage button {
   padding: 5px;
@@ -365,6 +380,12 @@ main#contact1{
 }
 button ::placeholder {
   color: white;
+}
+#ajouterImg{
+  padding: 20px;
+  background-color: orange;
+  font-weight: bold;
+  color:white;
 }
 @media screen and (min-width: 1024px) {
   main form {
